fix layout collapse at article title on IE

--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -399,7 +399,7 @@ ul.tab {
   .title-prop {
     width: 100%;
     height: 15px;
-    overflow: auto;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
